@@ -32,6 +32,9 @@
 - P4A icons now implements the freedesktop icon naming specifications:
   http://standards.freedesktop.org/icon-naming-spec/icon-naming-spec-latest.html
 - P4A_Mask's default icon size was changed from 48 to 32
+- P4A_Table_Navigation_Bar's current page indicator was switched from a
+  P4A_Label to a P4A_Box because the P4A_Label has to be bundled with a
+  P4A_Field
 
 3.0.0-rc4
 - a default submit button was added to P4A default HTML form
